--- a/jenkinsfile
+++ b/jenkinsfile
@@ -2,10 +2,12 @@ pipeline {
  agent 'any'
  stages{
    stage('Build Maven') {
+     steps {
       // Run the maven build
         withMaven(maven : 'maven') {
             bat'mvn clean install'
         }
+      }
    }
    stage('Build Docker Image') {
 	steps {
