--- a/jenkinsfile
+++ b/jenkinsfile
@@ -24,12 +24,14 @@ pipeline {
            }
 	//}
    }
- }
-  node {
+  stage ('Run the image in container') {
+    steps {
     docker.withServer('tcp://localhost:2375', 'dockerhub-login') {
         docker.image('crbhaskar/dockerautodeploy').withRun('-p 8080:8080') {
             /* do things */
         }
     }
-  } 
+    }
+  }   
+ }
 }
