--- a/jenkinsfile
+++ b/jenkinsfile
@@ -26,10 +26,12 @@ pipeline {
    }
   stage ('Run the image in container') {
     steps {
+    script {
     docker.withServer('tcp://localhost:2375', 'dockerhub-login') {
         docker.image('crbhaskar/dockerautodeploy').withRun('-p 8080:8080') {
             /* do things */
         }
+    }
     }
     }
   }   
