--- a/jenkinsfile
+++ b/jenkinsfile
@@ -27,10 +27,12 @@ pipeline {
   stage ('Run the image in container') {
     steps {
     script {
+    docker.withRegistry('https://index.docker.io/v2/','dockerhub-login') {
     docker.withServer('tcp://localhost:2375', 'dockerhub-login') {
         docker.image('crbhaskar/dockerautodeploy').withRun('-p 8080:8080') {
             /* do things */
         }
+    }
     }
     }
     }
