--- a/jenkinsfile
+++ b/jenkinsfile
@@ -31,7 +31,7 @@ pipeline {
 		docker.withRegistry('https://index.docker.io/v2/','dockerhub-login') {
 		    docker.withServer('tcp://localhost:2375', 'dockerhub-login') {
 			docker.image('crbhaskar/dockerautodeploy').withRun('-p 8080:8080') {
-			    /* do things */
+			    //do things
 			}
 		    }
 		}
