--- a/jenkinsfile
+++ b/jenkinsfile
@@ -37,7 +37,7 @@ pipeline {
 		}
 	    }
     }
-  }   */
+  }
   stage('Deploy') {
     steps {
     agent {
@@ -51,5 +51,34 @@ pipeline {
     }
     }
   }
+  */
+   stage('Run the application in container using image'){
+          runApp()
+  }
  }
+}
+/*
+def imagePrune(containerName){
+    try {
+        sh "docker image prune -f"
+        sh "docker stop $containerName"
+    } catch(error){}
+}
+
+def imageBuild(containerName, tag){
+    sh "docker build -t $containerName:$tag  -t $containerName --pull --no-cache ."
+    echo "Image build complete"
+}
+
+def pushToImage(containerName, tag, dockerUser, dockerPassword){
+    sh "docker login -u $dockerUser -p $dockerPassword"
+    sh "docker tag $containerName:$tag $dockerUser/$containerName:$tag"
+    sh "docker push $dockerUser/$containerName:$tag"
+    echo "Image push complete"
+}
+*/
+def runApp(){
+    bat'docker pull crbhaskar/dockerautodeploy'
+    bat'docker run -d --rm -p 8080:8080 --name dockerautodeploy crbhaskar/dockerautodeploy'
+    echo "Application started on port: 8080"
 }
