--- a/jenkinsfile
+++ b/jenkinsfile
@@ -55,7 +55,8 @@ pipeline {
    stage('Run the application in container using image'){
    steps {
     bat'docker pull crbhaskar/dockerautodeploy'
-    //bat'docker run -d --rm -p 8080:8080 --name dockerautodeploytest crbhaskar/dockerautodeploy'
+    bat'docker run -d --rm -p 8080:8080 --name dockerautodeploytest crbhaskar/dockerautodeploy'
+    /*
     		script {
     		docker.withRegistry('https://index.docker.io/v2/','dockerhub-login') {
 		    docker.withServer('tcp://localhost:2375', 'dockerhub-login') {
@@ -64,6 +65,7 @@ pipeline {
 		    }
 		}
 		}
+	*/
     }
   }
  }
